win访问策略修改

--- a/docs/en/功能特性/虚拟网络.md
+++ b/docs/en/功能特性/虚拟网络.md
@@ -1,30 +1,40 @@
 
 
-### 🌐 Filecat Network Proxy Usage Guide
+## 📡 Filecat Usage Guide
 
-#### 📌 Overview
-- After starting the server on one machine, other machines can connect as clients.
-- Each client will create a virtual IP on its local machine (on Windows, it must run with administrator privileges to create the virtual IP successfully).
-- Even on the same machine, you can run the client and connect to the local server by setting the server IP to `localhost`.
+### 🔧 Overview
 
-#### 🔌 About P2P (UDP Hole Punching)
-- Previously, P2P communication using UDP hole punching was supported. However, due to restrictions on UDP by ISPs in China—especially China Mobile, where many regions block UDP—this feature has been removed and is no longer maintained.
+- **Server Mode**: When Filecat is started in server mode on a computer, other computers can run the client mode to connect to this server. Each client creates a virtual IP on the local system. On Windows, this requires running Filecat with administrator privileges.
+- **Local Connection**: A client can also connect to a server running on the same machine by simply setting the server IP to `localhost`.
+- **P2P Notice (UDP Hole Punching)**: Filecat previously supported P2P communication via UDP hole punching. However, due to heavy restrictions by Chinese ISPs—especially China Mobile—UDP is often unreliable or blocked in many regions. As a result, this feature has been removed and is no longer maintained.
 
 ---
 
-### ✅ Steps to Use
+## 🚀 Steps to Use
 
-1. **Install and start Filecat on a computer with a public IP address, and enable server mode.**
-2. **Install and run Filecat on other computers without public IPs, enter the server's key, port, and other information, and enable client mode.**  
-   Each client sets its own virtual IP address.
-3. **All connected clients can now communicate with each other.**  
-   On Windows, Filecat's virtual network is set as “Public” by default. To enable ping communication, you need to manually change it to “Private.” However, this does not affect regular communication.
-4. **The server can also run a client that connects to itself.**  
-   This allows the server to actively send network requests to clients without public IPs.
+1. Install and start Filecat in server mode on a computer with a public IP address.
+2. Install Filecat on other computers that **do not have public IPs**, configure the server key, port, and other settings, then start the client mode. Each client sets its own virtual IP.
+3. Once connected, all clients can communicate with each other over the virtual network.
+4. **Note**: On Windows, the virtual network created by Filecat is set to **Public** by default. You must manually change it to **Private** in order to allow ICMP (ping) traffic. However, this does not affect normal communication.
+5. The server can also run a client instance and connect to itself. This allows the server to actively send requests to clients located behind NATs or without public IPs.
 
 ---
 
-### ⚙️ TCP Proxy Function
+## 🔁 TCP Proxy Function
 
-With the TCP proxy feature, you can access other devices on the same local network as a specific client—effectively achieving intranet penetration and remote access.
+With the TCP proxy feature enabled, the server can access other hosts within the client’s local network.
+
+---
+
+## 🔐 Change Network Profile (Public → Private)
+
+```powershell
+Set-NetConnectionProfile -InterfaceAlias "filecat" -NetworkCategory Private
+```
+
+### ✅ Check if the change was successful:
+
+```powershell
+Get-NetConnectionProfile
+```
 
