--- a/docs/zh-CN/功能特性/虚拟网络.md
+++ b/docs/zh-CN/功能特性/虚拟网络.md
@@ -10,3 +10,12 @@
 
 # Tcp代理
 配合tcp代理功能，可以访问某个客户端所在内网的其它主机。
+
+# 修改访问策略为私有
+```bash
+Set-NetConnectionProfile -InterfaceAlias "filecat" -NetworkCategory Private
+```
+查看是否修改成功
+```bash
+Get-NetConnectionProfile
+```
