--- a/docs/en/命令参数.md
+++ b/docs/en/命令参数.md
@@ -23,6 +23,7 @@
 15. reset_root_username – Regenerate the admin username (remove this parameter after first use; same for the password below)  
 16. reset_root_password – Regenerate the admin password  
 17. base_url – URL route prefix  
+18. Lan, which only takes effect when you first create an account, currently supports zh (simplified) en
 ```
 
 # `.env` File Configuration
