--- a/docs/zh-CN/命令参数.md
+++ b/docs/zh-CN/命令参数.md
@@ -18,6 +18,7 @@
 15. reset_root_username 重新生成管理员的账号 (启动完请删除这个参数下次要再使用，下面的密码也是)
 16. reset_root_password
 17. base_url 路由前缀
+18. lan 语言，只在第一次创建账号的时候生效 目前支持  zh(简体) en
 ```
 # env文件
 ```text
